--- a/404.html
+++ b/404.html
@@ -41,8 +41,8 @@
       -->
       <section id="sobre">
         <h3 class="subtitulo">Sobre</h3>
-        <p><strong>Analista de Dados Junior</strong></p>
-        <p>Estou a procura de uma oportunidade como analista de dados junior onde possa mostrar meus conhecimentos 
+        <p><strong>Cientista de Dados Junior</strong></p>
+        <p>Estou a procura de uma oportunidade como cientista de dados junior onde possa mostrar meus conhecimentos 
         em <strong>python</strong>, <strong>mySql</strong> e <strong>power bi</strong> estou motivado para me integrar
         a uma equipe dinâmica, contribuindo ativamente enquanto aprimoro minhas habilidades através de experiencias práticas.</p>  
 
